--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,74 @@
-name: Build reFlutter Android ARM64
+name: Build reFlutter Android ARM64 Only
+
+# NOTE: ARM64-only builds require ~40-50GB disk space and take 3-5 hours
+# GitHub Actions free runners may still run out of space
+# Consider using self-hosted runners for reliable builds
 
 on:
   workflow_dispatch:
     inputs:
       snapshot_hash:
-        description: 'Snapshot Hash'
+        description: 'Snapshot Hash (e.g., d91c0e6f35f0eb2e44124e8f42aa44a7)'
         required: true
         type: string
       engine_commit:
-        description: 'Engine Commit'
+        description: 'Engine Commit (e.g., cf56914b326edb0ccb123ffdc60f00060bd513fa)'
         required: true
         type: string
       wait_time:
-        description: 'Wait Time (seconds)'
+        description: 'Wait Time in seconds (for source code modifications)'
         required: false
         default: '300'
         type: string
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-8-cores  # Use larger runner if available
+    timeout-minutes: 480  # 8 hours max (builds can take a long time)
     
     steps:
+      - name: Free up disk space
+        run: |
+          echo "=== Before cleanup ==="
+          df -h
+          
+          # Remove unnecessary packages
+          sudo apt-get remove -y '^aspnetcore-.*' '^dotnet-.*' '^llvm-.*' 'php.*' '^mongodb-.*' '^mysql-.*' azure-cli google-chrome-stable firefox powershell mono-devel libgl1-mesa-dri
+          sudo apt-get autoremove -y
+          sudo apt-get clean
+          
+          # Remove large directories
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf /usr/share/swift
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo rm -rf /imagegeneration
+          sudo rm -rf /usr/local/graalvm/
+          sudo rm -rf /usr/local/.ghcup/
+          sudo rm -rf /usr/local/share/powershell
+          sudo rm -rf /usr/local/share/chromium
+          sudo rm -rf /usr/local/lib/node_modules
+          
+          # Remove Docker images we don't need
+          docker rmi $(docker image ls -aq) 2>/dev/null || true
+          
+          echo ""
+          echo "=== After cleanup ==="
+          df -h
+          
+          # Check if we have at least 50GB free
+          FREE_SPACE=$(df -BG / | awk 'NR==2 {print $4}' | sed 's/G//')
+          echo ""
+          echo "Free space: ${FREE_SPACE}GB"
+          
+          if [ "$FREE_SPACE" -lt 50 ]; then
+            echo "⚠️  WARNING: Only ${FREE_SPACE}GB free. Flutter engine builds typically need 50GB+"
+            echo "Build may fail due to insufficient disk space"
+          fi
+      
       - name: Checkout repository
         uses: actions/checkout@v4
       
@@ -32,83 +79,150 @@ jobs:
         run: |
           git clone https://github.com/Impact-I/reFlutter
           cd reFlutter
+          echo "reFlutter repository contents:"
+          ls -lah
       
       - name: Build Docker image
         run: |
           cd reFlutter
-          docker build -t reflutter -f Dockerfile .
+          docker build -t reflutter \
+            --build-arg HASH_PATCH=${{ inputs.snapshot_hash }} \
+            --build-arg COMMIT=${{ inputs.engine_commit }} \
+            --build-arg arm64=${{ inputs.build_arm64 && 'arm64-v8a' || '0' }} \
+            --build-arg arm=${{ inputs.build_arm && 'armeabi-v7a' || '0' }} \
+            --build-arg x64=${{ inputs.build_x64 && 'x86_64' || '0' }} \
+            -f Dockerfile .
       
       - name: Create output directory
-        run: mkdir -p output
+        run: mkdir -p ${{ github.workspace }}/output
       
-      - name: Check reFlutter directory structure
-        run: |
-          echo "reFlutter directory contents:"
-          ls -lah reFlutter/
-      
-      - name: Copy reFlutter files to output (if needed)
-        run: |
-          # Copy any necessary files from reFlutter to output directory
-          if [ -f reFlutter/setup.py ]; then
-            cp reFlutter/setup.py output/
-          fi
-          if [ -f reFlutter/pyproject.toml ]; then
-            cp reFlutter/pyproject.toml output/
-          fi
-      
-      - name: Run reFlutter build for ARM64
+      - name: Run reFlutter build
         run: |
           cd reFlutter
+          
+          # Start disk space monitoring in background
+          (while true; do 
+            echo "=== Disk Usage [$(date +%T)] ===" 
+            df -h / | tail -n1
+            sleep 300  # Check every 5 minutes
+          done) &
+          MONITOR_PID=$!
+          
+          # Run the build
           docker run \
             -e WAIT=${{ inputs.wait_time }} \
-            -e x64=0 \
-            -e arm=0 \
+            -e arm64=${{ inputs.build_arm64 && 'arm64-v8a' || '0' }} \
+            -e arm=${{ inputs.build_arm && 'armeabi-v7a' || '0' }} \
+            -e x64=${{ inputs.build_x64 && 'x86_64' || '0' }} \
             -e HASH_PATCH=${{ inputs.snapshot_hash }} \
             -e COMMIT=${{ inputs.engine_commit }} \
             --rm \
             -v "$(pwd):/t" \
             reflutter
+          
+          # Stop monitoring
+          kill $MONITOR_PID 2>/dev/null || true
       
-      - name: Copy built artifacts
+      - name: List build output
         run: |
-          echo "Copying artifacts from reFlutter directory..."
-          cp -r reFlutter/*.so output/ 2>/dev/null || true
-          cp -r reFlutter/*.zip output/ 2>/dev/null || true
-          cp -r reFlutter/build output/ 2>/dev/null || true
-      
-      - name: List built artifacts
-        run: |
-          echo "Built artifacts:"
-          ls -lah output/ || echo "No output directory"
-          echo ""
-          echo "reFlutter directory after build:"
+          echo "=== reFlutter directory contents ==="
           ls -lah reFlutter/
+          echo ""
+          echo "=== Looking for .so files ==="
+          find reFlutter/ -name "*.so" -type f || echo "No .so files found"
       
-      - name: Upload artifacts
+      - name: Copy artifacts to output directory
+        run: |
+          cd reFlutter
+          if [ -f libflutter_arm64.so ]; then
+            cp libflutter_arm64.so ${{ github.workspace }}/output/
+            echo "✓ Copied libflutter_arm64.so"
+          fi
+          if [ -f libflutter_arm.so ]; then
+            cp libflutter_arm.so ${{ github.workspace }}/output/
+            echo "✓ Copied libflutter_arm.so"
+          fi
+          if [ -f libflutter_x64.so ]; then
+            cp libflutter_x64.so ${{ github.workspace }}/output/
+            echo "✓ Copied libflutter_x64.so"
+          fi
+          
+          # Create a build info file
+          cat > ${{ github.workspace }}/output/build_info.txt << EOF
+          reFlutter Build Information
+          ============================
+          Snapshot Hash: ${{ inputs.snapshot_hash }}
+          Engine Commit: ${{ inputs.engine_commit }}
+          Build Date: $(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          ARM64: ${{ inputs.build_arm64 }}
+          ARM (32-bit): ${{ inputs.build_arm }}
+          x64: ${{ inputs.build_x64 }}
+          EOF
+          
+          echo ""
+          echo "=== Final output directory ==="
+          ls -lah ${{ github.workspace }}/output/
+      
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: reflutter-arm64-${{ inputs.snapshot_hash }}
-          path: |
-            output/*
-            reFlutter/*.so
-            reFlutter/*.zip
-            reFlutter/build/**
+          name: reflutter-android-${{ inputs.snapshot_hash }}-${{ github.run_number }}
+          path: output/*
           retention-days: 30
           if-no-files-found: warn
       
-      - name: Create Release (Optional)
-        if: github.ref == 'refs/heads/main'
+      - name: Create Release
+        if: success() && github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: build-${{ github.run_number }}
-          name: reFlutter ARM64 Build ${{ github.run_number }}
+          name: reFlutter Build ${{ github.run_number }}
           body: |
-            **Build Configuration:**
-            - Snapshot Hash: `${{ inputs.snapshot_hash }}`
-            - Engine Commit: `${{ inputs.engine_commit }}`
-            - Architecture: ARM64
-            - Wait Time: ${{ inputs.wait_time }}s
+            ## reFlutter Android Build
+            
+            **Configuration:**
+            - 📱 Snapshot Hash: `${{ inputs.snapshot_hash }}`
+            - 🔧 Engine Commit: `${{ inputs.engine_commit }}`
+            - ⏱️ Wait Time: ${{ inputs.wait_time }}s
+            
+            **Architectures:**
+            - ARM64 (arm64-v8a): ${{ inputs.build_arm64 && '✅' || '❌' }}
+            - ARM 32-bit (armeabi-v7a): ${{ inputs.build_arm && '✅' || '❌' }}
+            - x64 (x86_64): ${{ inputs.build_x64 && '✅' || '❌' }}
+            
+            **Files:**
+            - `libflutter_arm64.so` - ARM64 library (if built)
+            - `libflutter_arm.so` - ARM 32-bit library (if built)
+            - `libflutter_x64.so` - x64 library (if built)
+            - `build_info.txt` - Build metadata
           files: output/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Build summary
+        if: always()
+        run: |
+          echo "### reFlutter Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Configuration:**" >> $GITHUB_STEP_SUMMARY
+          echo "- Snapshot Hash: \`${{ inputs.snapshot_hash }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Engine Commit: \`${{ inputs.engine_commit }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Wait Time: ${{ inputs.wait_time }}s" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Architectures Built:**" >> $GITHUB_STEP_SUMMARY
+          echo "- ARM64: ${{ inputs.build_arm64 && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- ARM 32-bit: ${{ inputs.build_arm && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- x64: ${{ inputs.build_x64 && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ -d output ] && [ "$(ls -A output/*.so 2>/dev/null)" ]; then
+            echo "**Built Artifacts:**" >> $GITHUB_STEP_SUMMARY
+            for file in output/*.so; do
+              if [ -f "$file" ]; then
+                size=$(ls -lh "$file" | awk '{print $5}')
+                echo "- \`$(basename $file)\` ($size)" >> $GITHUB_STEP_SUMMARY
+              fi
+            done
+          else
+            echo "⚠️ No .so files were generated" >> $GITHUB_STEP_SUMMARY
+          fi
