--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-v2:
-    runs-on: macos-15
+    runs-on: macos-14-large
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -68,7 +68,7 @@ jobs:
             ./*.so
 
   build-v3:
-    runs-on: macos-15
+    runs-on: macos-14-large
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
